--- a/web/static/admin/css/style.default.css
+++ b/web/static/admin/css/style.default.css
@@ -507,7 +507,7 @@ strong {
 }
 
 .nav-bracket > li.nav-parent > a:focus {
-   background-color: none;
+   background-color: transparent;
    color: #8F939E;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
@@ -725,7 +725,7 @@ strong {
 }
 
 .pageheader .fa-file-text {
-	padding: 6px 10px;`
+	padding: 6px 10px;
 }
 
 .pageheader .fa-map-marker {
